# AI-Inbox

./: README.md
ai-todo-inbox-open-source/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
ai-todo-inbox-open-source/src/: App.css  App.tsx  index.css  main.tsx
ai-todo-inbox-open-source/src-tauri/: Cargo.toml  tauri.conf.json
ai-todo-inbox-open-source/src-tauri/capabilities/: default.json
ai-todo-inbox-open-source/src-tauri/icons/: icon.icns
ai-todo-inbox-open-source/src-tauri/src/: lib.rs  main.rs
ai-todo-inbox-open-source/src/lib/: ai-config.ts  ai.ts  db.ts  reminders.ts  runtime.ts  types.ts
